# pi-crawler

./: .gitignore  README.md  pyproject.toml
src/picrawler_server/: __main__.py  app.py  auth.py  config.py  hardware.py  models.py  state.py  tts.py
src/picrawler_server/routes/: audio.py  meta.py  movement.py  sensors.py
tests/: conftest.py  test_audio.py  test_auth.py  test_meta.py  test_movement.py  test_sensors.py  test_tts.py
