[project]
name = "picrawler-server"
version = "1.0.0"
description = "HTTP control surface for an LLM agent driving a SunFounder PiCrawler quadruped robot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
pi = [
    "picrawler",
    "robot-hat",
    "vilib",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.11",
]

[project.scripts]
picrawler-server = "picrawler_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/picrawler_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
